# msl

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
ext/: CMakeLists.txt
ext/libctypes/: CMakeLists.txt  ctypes.c
ext/libctypes/libffi_msvc/: ffi.h  fficonfig.h
ext/libctypes/libffi_msvc/libffi_msvc2003/: libffi_msvc2003.sln  libffi_msvc2003.vcproj
ext/libctypes/libffi_msvc/libffi_msvc2008/: libffi_msvc2008.sln  libffi_msvc2008.vcproj
ext/libctypes/libffi_msvc/libffi_msvc2010/: libffi_msvc2010.sln  libffi_msvc2010.vcxproj  libffi_msvc2010.vcxproj.filters
ext/libctypes/libffi_msvc/libffi_msvc2012/: libffi_msvc2012.sln  libffi_msvc2012.vcxproj
ext/libmath/: CMakeLists.txt  math.c
ext/libstring/: CMakeLists.txt  string.c
ext/libwin32/: CMakeLists.txt  win32.c
inc/: matrix.h
src/: CMakeLists.txt
src/libmsl/: CMakeLists.txt  builtins.c  builtins.h  config.h  debug.c  debug.h  dict.c  dict.h  err.c  err.h  func.c  func.h  gc.c  gc.h  hash.c  hash.h  hash_list.c  hash_list.h  header.h  ins.c  ins.h  lex.c  lex.h  list.c  list.h  matrix.c  mod.c  mod.h  obj.c  obj.h  opt.c  opt.h  parse.c  parse.h  pool.c  pool.h  str.c  str.h  vec.c  vec.h  (+2 more)
src/msl/: CMakeLists.txt  main.c
std/: windows.mat
test/8queen/: 8queen.lua  8queen.mat  8queen.py  result.txt
test/binary_tree/: binary_tree.lua  binary_tree.mat  binary_tree.py  result.txt
test/tetris/: tetris.mat
