INCLUDE_DIRECTORIES (
    ${CMAKE_CURRENT_SOURCE_DIR}/../../inc
)

FILE (GLOB SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
	*.c
	*.h
)

IF (WIN32)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF (WIN32)

IF (BUILD_DLL)
	ADD_LIBRARY (libwin32 SHARED ${SRC})
	IF (WIN32)
		TARGET_LINK_LIBRARIES (libwin32 libmsl)
	ELSE (WIN32)
		TARGET_LINK_LIBRARIES (libwin32 libmsl m)
	ENDIF (WIN32)
ELSE (BUILD_DLL)
	ADD_LIBRARY (libwin32 STATIC ${SRC})
ENDIF (BUILD_DLL)

SET_TARGET_PROPERTIES(libwin32
	PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../bin
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../lib
)
