INCLUDE_DIRECTORIES (
    ${CMAKE_CURRENT_SOURCE_DIR}/../../inc
)

FILE (GLOB SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
	*.c
	*.h
)

IF (WIN32)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF (WIN32)

IF (BUILD_DLL)
	ADD_LIBRARY (libmsl SHARED ${SRC})
ELSE (BUILD_DLL)
	ADD_LIBRARY (libmsl STATIC ${SRC})
ENDIF (BUILD_DLL)

SET_TARGET_PROPERTIES(libmsl
	PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../bin
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../lib
)
