
file(GLOB SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
	*.c 
	*.h
)

IF (WIN32)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF (WIN32)

ADD_EXECUTABLE(msl ${SRC})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../inc)

IF (BUILD_DLL)
	IF (WIN32)
		TARGET_LINK_LIBRARIES (msl libmsl)
	ELSE (WIN32)
		TARGET_LINK_LIBRARIES (msl libmsl m)
	ENDIF (WIN32)
ELSE (BUILD_DLL)
	IF (WIN32)
		TARGET_LINK_LIBRARIES (msl libmsl libmath libwin32)
	ELSE (WIN32)
		TARGET_LINK_LIBRARIES (msl libmsl libmath libwin32 m)
	ENDIF (WIN32)
ENDIF (BUILD_DLL)

SET_TARGET_PROPERTIES(msl
	PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../bin
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../lib
)
